--- a/src/main/resources/templates/createHero.html
+++ b/src/main/resources/templates/createHero.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <link th:href="@{/main.css}" rel="stylesheet">
+    <title>Create</title>
 </head>
 <body>
-$END$
+
+<h1 class="create_h1">Create your Superhero</h1>
+
+<form action="/register"  method="post" th:object="${superhero}">
+    <label>Hero Name:</label>
+    <input type="text" th:field="*{heroName}" /><br/>
+
+    <label>Real Name:</label>
+    <input type="text" th:field="*{realName}" /><br/>
+
+    <label>Creation Year:</label>
+    <input type="text" th:field="*{creationYear}" /><br/>
+
+    <label>City:</label>
+    <select th:field="*{city}">
+        <option th:each="cities : ${listCities}" th:value="${cities}" th:text="${cities}" />
+    </select>
+
+    <label>Superpowers:</label>
+    <div th:each="power: ${listSuperPowers}">
+        <input type="checkbox" th:field="*{powerList}" th:value="${power}" th:text="${power}">
+    </div>
+
+    <br/>
+
+    <button type="submit">Create</button>
+    <a href="/superheroes">Go back</a>
+</form>
 </body>
 </html>
