--- a/src/main/resources/templates/createdResult.html
+++ b/src/main/resources/templates/createdResult.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <link th:href="@{/main.css}" rel="stylesheet">
+    <title>Created</title>
 </head>
 <body>
-$END$
+<table>
+    <thead>
+    <tr>
+        <th>Hero name</th>
+        <th>Real name</th>
+        <th>Creation year</th>
+        <th>City</th>
+        <th>Superpowers</th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <tr>
+        <td th:text="${superhero.heroName}"/>
+        <td th:text="${superhero.realName}"/>
+        <td th:text="${superhero.creationYear}"/>
+        <td th:text="${superhero.city}"/>
+        <td th:text="${superhero.powerList}"/>
+    </tr>
+    </tbody>
+</table>
+
+<a href="/superheroes">Go back</a>
+
 </body>
 </html>
