--- a/src/main/resources/templates/powers.html
+++ b/src/main/resources/templates/powers.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <link th:href="@{/main.css}" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/f16ddf284a.js" crossorigin="anonymous"></script>
+    <title>Powers</title>
 </head>
+
 <body>
-$END$
+
+<h1 class="powers_h1"> <span th:text="${name}"/>'s powers</h1>
+
+    <table class="powers">
+        <tr th:each="power: ${powers}">
+            <td th:text="${power}"></td>
+        </tr>
+        <a href="/superheroes"><i class="fa-solid fa-circle-left"></i></a>
+    </table>
+
 </body>
 </html>
