Ændret nogen få ting

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background: #33CCCC; /* Fallback */
+    background: #33CCCC;
     animation: color 9s infinite linear;
     padding: 2em;
 }
